[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
base64 = "0.22.1"
bytes = "1.10.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8.5"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
